--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.3.1",
+    "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.52.0",
     "native-testing-library": "^1.2.0",
     "prettier": "^1.16.4",
