--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "commit:all": "npm run commit:add && npm run commit",
     "test": "jest",
     "pretty-quick": "pretty-quick --staged --pattern '**/*.(js|jsx|ts|tsx)'",
-    "prepublish": "rm -rf dist; babel src --out-dir dist --ignore 'src/__tests__/*'",
+    "prepublishOnly": "rm -rf dist; babel src --out-dir dist --ignore 'src/__tests__/*'",
     "semantic-release": "semantic-release",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch --coverage"
