--- a/package.json
+++ b/package.json
@@ -74,6 +74,11 @@
       "@semantic-release/github"
     ]
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bcarroll22/jest-native.git"
