--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "printWidth": 100,
     "singleQuote": true,
     "trailingComma": "all",
-    "tabWidth": 2
+    "tabWidth": 2,
+    "proseWrap": "always"
   },
   "release": {
     "branch": "master",
