--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ branches:
   only:
     - master
 install: npm install
-script: npm test
+script: npm run test:coverage
 jobs:
   include:
     - stage: release
