--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch --coverage"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "testing",
     "native-testing-library",
@@ -39,7 +41,7 @@
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.52.0",
-    "native-testing-library": "^1.5.0",
+    "native-testing-library": "1.x",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "react": "16.8.3",
@@ -47,7 +49,7 @@
     "semantic-release": "^15.13.3"
   },
   "peerDependencies": {
-    "native-testing-library": "^1.2.0",
+    "native-testing-library": ">=1.2.0",
     "react": "*",
     "react-native": "*"
   },
