chore: change to testing-library org

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "jest-native",
-  "projectOwner": "bcarroll22",
+  "projectOwner": "testing-library",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
