--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.52.0",
-    "native-testing-library": "1.x",
+    "native-testing-library": "^3.0.0-beta.1",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "react": "16.8.3",
@@ -50,9 +50,8 @@
     "semantic-release": "^15.13.3"
   },
   "peerDependencies": {
-    "native-testing-library": ">=1.2.0",
     "react": "*",
-    "react-native": "*"
+    "react-native": ">0.55"
   },
   "husky": {
     "hooks": {
