--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-native",
-  "version": "2.0.0-beta.4",
+  "version": "0.0.0-semantically-released",
   "description": "Custom jest matchers to test the state of React Native",
   "main": "dist/index.js",
   "scripts": {
