--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.52.0",
-    "native-testing-library": "^3.0.0-beta.5",
+    "native-testing-library": "^3.0.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "react": "16.8.3",
