--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testing-library/jest-native",
-  "version": "3.0.0",
+  "version": "0.0.0-semantically-released",
   "description": "Custom jest matchers to test the state of React Native",
   "main": "dist/index.js",
   "types": "extend-expect.d.ts",
