--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
     "@babel/cli": "7.2.3",
     "@babel/core": "7.4.0",
     "@babel/runtime": "7.4.0",
+    "@testing-library/react-native": "^4.0.1",
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.52.0",
-    "native-testing-library": "^3.0.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "react": "16.8.6",
