--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@babel/cli": "7.2.3",
     "@babel/core": "7.4.0",
     "@babel/runtime": "7.4.0",
-    "@testing-library/react-native": "^4.0.1",
+    "@testing-library/react-native": "^6.0.0",
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.3.1",
@@ -48,7 +48,7 @@
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "react": "16.8.6",
-    "react-native": "^0.59.6",
+    "react-native": "0.63.2",
     "react-test-renderer": "16.8.6",
     "semantic-release": "^15.13.3"
   },
