--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "proseWrap": "always"
   },
   "release": {
-    "branch": "master",
+    "branch": "main",
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
