chore(ci): add missing env section

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -62,3 +62,6 @@ jobs:
 
       - name: 🚀 Release
         run: npm run semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
