--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.10",
-    "@babel/runtime": "^7.17.9",
+    "@babel/runtime": "^7.18.9",
     "@testing-library/react-native": "^11.0.0",
     "commitizen": "^3.1.2",
     "cz-conventional-changelog": "^2.1.0",
@@ -47,9 +47,9 @@
     "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^1.10.0",
-    "react": "18.2.0",
-    "react-native": "^0.69.3",
-    "react-test-renderer": "^18.2.0",
+    "react": "18.0.0",
+    "react-native": "^0.69.4",
+    "react-test-renderer": "18.0.0",
     "semantic-release": "^15.14.0"
   },
   "husky": {
