--- a/package.json
+++ b/package.json
@@ -28,28 +28,28 @@
     "react-native"
   ],
   "dependencies": {
-    "chalk": "^2.4.1",
-    "jest-diff": "^27.4.6",
-    "jest-matcher-utils": "^27.4.6",
-    "pretty-format": "^27.3.1",
+    "chalk": "^4.1.2",
+    "jest-diff": "^28.1.3",
+    "jest-matcher-utils": "^28.1.3",
+    "pretty-format": "^28.1.3",
     "ramda": "^0.28.0",
     "redent": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.6",
-    "@babel/core": "7.15.8",
-    "@babel/runtime": "^7.17.9",
-    "@testing-library/react-native": "^9.1.0",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/runtime": "^7.18.9",
+    "@testing-library/react-native": "^11.0.0",
     "commitizen": "^3.1.2",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.3.1",
-    "jest": "^27.0.6",
+    "jest": "^28.1.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "prettier": "^1.16.4",
+    "prettier": "^2.7.1",
     "pretty-quick": "^1.10.0",
-    "react": "17.0.2",
-    "react-native": "^0.66.4",
-    "react-test-renderer": "^17.0.1",
+    "react": "18.0.0",
+    "react-native": "^0.69.4",
+    "react-test-renderer": "18.0.0",
     "semantic-release": "^15.14.0"
   },
   "husky": {
