--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "proseWrap": "always"
   },
   "release": {
-    "branch": "main",
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
