--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -28,7 +28,10 @@ jobs:
         with:
           useLockFile: false
 
-      - name: ▶️ Run validate script
+      - name: ▶️ Run linter
+        run: npm run lint
+
+      - name: ▶️ Run test script
         run: npm run test:coverage
 
       - name: ⬆️ Upload coverage report
