--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -26,13 +26,14 @@ jobs:
       - name: 📥 Download deps
         uses: bahmutov/npm-install@v1
         with:
+          useYarn: true
           useLockFile: false
 
       - name: ▶️ Run linter
-        run: npm run lint
+        run: yarn lint
 
       - name: ▶️ Run tests with coverage
-        run: npm run test:coverage
+        run: yarn test:coverage
 
       - name: ⬆️ Upload coverage report
         uses: codecov/codecov-action@v3
@@ -64,7 +65,7 @@ jobs:
           useLockFile: false
 
       - name: 🚀 Release
-        run: npm run semantic-release
+        run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
