--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.21.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^1.3.1",
     "jest": "^28.1.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "^2.7.1",
@@ -53,6 +54,11 @@
     "react-native": "^0.69.4",
     "react-test-renderer": "18.0.0",
     "semantic-release": "^19.0.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pretty-quick"
+    }
   },
   "prettier": {
     "printWidth": 100,
