--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "readme:toc": "doctoc README.md --maxlevel 3 --title '## Table of Contents'",
     "test": "jest --colors",
     "lint": "eslint .",
-    "prepublishOnly": "rm -rf dist; babel src --out-dir dist --ignore 'src/__tests__/*'",
+    "pretty-quick": "pretty-quick --staged",
+    "prepublishOnly": "rm -rf dist && tsc -p tsconfig.prod.json",
     "semantic-release": "semantic-release",
     "test:coverage": "jest --coverage --colors",
-    "test:watch": "jest --watch --coverage"
+    "test:watch": "jest --watch --coverage",
+    "typescript": "tsc"
   },
   "files": [
     "dist",
@@ -42,18 +44,23 @@
     "@callstack/eslint-config": "^13.0.1",
     "@relmify/jest-serializer-strip-ansi": "^1.0.2",
     "@testing-library/react-native": "^11.0.0",
+    "@types/jest": "^28.1.6",
+    "@types/react": "^18.0.17",
+    "@types/react-native": "^0.69.5",
+    "@types/react-test-renderer": "^18.0.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.21.0",
     "husky": "^8.0.1",
     "jest": "^29.0.1",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "metro-react-native-babel-preset": "^0.72.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "react": "18.0.0",
     "react-native": "^0.69.4",
     "react-test-renderer": "18.0.0",
-    "semantic-release": "^19.0.3"
+    "semantic-release": "^19.0.3",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
