--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -24,12 +24,13 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: 📥 Download deps
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: false
+        run: yarn install
 
-      - name: ▶️ Run validate script
-        run: npm run test:coverage
+      - name: ▶️ Run linter
+        run: yarn lint
+
+      - name: ▶️ Run tests with coverage
+        run: yarn test:coverage
 
       - name: ⬆️ Upload coverage report
         uses: codecov/codecov-action@v3
@@ -61,7 +62,7 @@ jobs:
           useLockFile: false
 
       - name: 🚀 Release
-        run: npm run semantic-release
+        run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
