--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chalk": "^4.1.2",
     "jest-diff": "^29.0.1",
     "jest-matcher-utils": "^29.0.1",
+    "jest-serializer-ansi-escapes": "^2.0.1",
     "pretty-format": "^29.0.1",
     "redent": "^3.0.0"
   },
