--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "@babel/core": "^7.18.10",
     "@babel/runtime": "^7.18.9",
     "@callstack/eslint-config": "^12.0.2",
+    "@relmify/jest-serializer-strip-ansi": "^1.0.2",
     "@testing-library/react-native": "^11.0.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.21.0",
     "husky": "^8.0.1",
     "jest": "^29.0.1",
-    "jest-snapshot-serializer-ansi": "^1.0.0",
     "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
