use RNTL tsconfig

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript": "tsc -noEmit"
   },
   "files": [
-    "dist",
+    "build",
     "extend-expect.js",
     "extend-expect.d.ts"
   ],
