--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,47 +1,19 @@
 {
   "compilerOptions": {
-    /* Basic Options */
-
-    // https://github.com/microsoft/TypeScript/wiki/Node-Target-Mapping as now we support node14.
+    "strict": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "jsx": "react",
+    "target": "ES2020",
     "lib": ["ES2020"],
     "module": "commonjs",
-    "target": "ES2020",
-
-    "jsx": "preserve",
-    "declaration": false,
-    "rootDir": "./",
-    "outDir": "dist",
-
-    /* Strict Type-Checking Options */
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "useUnknownInCatchVariables": false,
-
-    /* Additional Checks */
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-
-    /* Module Resolution Options */
     "moduleResolution": "node",
-    "baseUrl": "./src",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "allowUmdGlobalAccess": true,
-    "resolveJsonModule": true,
-
-    /* Advanced Options */
-    "skipLibCheck": true /* Skip type checking of declaration files. */,
-    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+    "declaration": true,
+    "noEmit": false,
+    "outDir": "build"
   },
   "files": ["./extend-expect.d.ts"],
   "exclude": ["node_modules", "android", "ios"],
-  "include": ["./src", "setup-test.ts"]
+  "include": ["src/**/*", "setup-test.ts"]
 }
