chore: vlaidate types on CI

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -29,6 +29,9 @@ jobs:
       - name: ▶️ Run linter
         run: yarn lint
 
+      - name: ▶️ Run typecheck
+        run: yarn typecheck
+
       - name: ▶️ Run tests with coverage
         run: yarn test:coverage
 
