chore: trigger release

--- a/package.json
+++ b/package.json
@@ -112,7 +112,13 @@
               "type": "refactor",
               "release": "patch"
             }
-          ]
+          ],
+          "parserOpts": {
+            "noteKeywords": [
+              "BREAKING CHANGE",
+              "BREAKING CHANGES"
+            ]
+          }
         }
       ],
       "@semantic-release/release-notes-generator",
