--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   "peerDependencies": {
     "react": ">=16.0.0",
     "react-native": ">=0.59",
-    "react-test-renderer": ">=16.0.0"
+    "react-test-renderer": ">=16.0.0",
+    "@testing-library/react-native": ">=11.0.0"
   },
   "prettier": {
     "printWidth": 100,
