--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "semantic-release": "semantic-release",
     "test:coverage": "jest --coverage --colors",
     "test:watch": "jest --watch --coverage",
-    "typecheck": "tsc -noEmit"
+    "typecheck": "tsc -noEmit",
+    "generate-barrels": "barrelsby --config ./barrelsby.json"
   },
   "files": [
     "dist",
@@ -47,6 +48,7 @@
     "@types/react": "^18.0.19",
     "@types/react-native": "^0.70.7",
     "@types/react-test-renderer": "^18.0.0",
+    "barrelsby": "^2.5.1",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.21.0",
