--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "singleQuote": true,
     "trailingComma": "all",
     "tabWidth": 2,
-    "proseWrap": "always"
+    "proseWrap": "preserve"
   },
   "eslintConfig": {
     "extends": "@callstack",
