--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@babel/runtime": "^7.18.9",
     "@callstack/eslint-config": "^13.0.1",
     "@relmify/jest-serializer-strip-ansi": "^1.0.2",
-    "@testing-library/react-native": "^11.0.0",
+    "@testing-library/react-native": "^12.0.0-rc.0",
     "@types/jest": "^29.0.1",
     "@types/react": "^18.0.19",
     "@types/react-native": "^0.71.0",
