--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@babel/runtime": "^7.18.9",
     "@callstack/eslint-config": "^13.0.1",
     "@relmify/jest-serializer-strip-ansi": "^1.0.2",
-    "@testing-library/react-native": "^11.0.0",
+    "@testing-library/react-native": "^12.0.0-rc.0",
     "@types/jest": "^29.0.1",
     "@types/react": "^18.0.19",
     "@types/react-native": "^0.71.0",
@@ -52,12 +52,12 @@
     "eslint": "^8.21.0",
     "husky": "^8.0.1",
     "jest": "^29.0.1",
-    "metro-react-native-babel-preset": "^0.72.3",
+    "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "react": "18.1.0",
-    "react-native": "^0.70.6",
-    "react-test-renderer": "18.1.0",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-test-renderer": "18.2.0",
     "semantic-release": "^19.0.3",
     "typescript": "^4.8.3"
   },
